// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#PasswordField() it should display validation errors 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      validators={
        Array [
          [Function],
        ]
      }
      value="a"
    />
  </div>
</form>
`;

exports[`#PasswordField() should confirm passwords are equal 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      value="wizard"
    />
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="confirmPassword"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      validators={
        Array [
          [Function],
        ]
      }
      value="wizard"
    />
  </div>
</form>
`;

exports[`#PasswordField() should how message that passwords are not equal 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      value="wizard"
    />
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="confirmPassword"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      validators={
        Array [
          [Function],
        ]
      }
      value="w"
    />
  </div>
</form>
`;

exports[`#PasswordField() should how message that passwords are not equal 2`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      value="wizard"
    />
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="confirmPassword"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      validators={
        Array [
          [Function],
        ]
      }
      value="w"
    />
  </div>
  <div
    className="alert mt-2 alert-danger undefined"
  >
    Fields do not match
  </div>
</form>
`;

exports[`#PasswordField() should maintain a disabled submit button with both password fields not matching 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="confirmPassword"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
  <button
    className="btn btn-success btn-lg"
    disabled={false}
  >
    Submit MockComponent
  </button>
</form>
`;

exports[`#PasswordField() should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      value=""
    />
  </div>
</form>
`;

exports[`#PasswordField() should render an input field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="password"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="password"
      value="joe"
    />
  </div>
</form>
`;

exports[`<Form /> should render a form element with bootstrap extra tags 1`] = `
<form
  bare={false}
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;

exports[`<Form /> should render a form element with no extra tags 1`] = `
<form
  onSubmit={[Function]}
/>
`;
